# nes

./: .gitignore  Cargo.toml
.cargo/: config
src/: bus.rs  emulator.rs  lib.rs  main.rs  rom.rs
src/components/: cpu.rs  mapper.rs  mod.rs  opcode.rs  ppu.rs  rom.rs
src/graphics/: mod.rs  shader.wgsl  state.rs  texture.rs
web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
