[package]
name = "nes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
path = "src/main.rs"

[dependencies]
bitflags = "1.3"
lazy_static = "1.4.0"
cfg-if = "1"
winit = "0.26"
wgpu = "0.12"
env_logger = "0.9"
pollster = "0.2"
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = {version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}
